# arcus

./: README.md
Version 1.0/: 99-next_version_improvements.md
Version 1.0/Phase 0 - Hardware Requirements/: 00-hardware.md
Version 1.0/Phase 1 - Build and Test Hardware/: 01-build_and_test.md
Version 1.0/Phase 1 - Build and Test Hardware/files/: pantilt_test.py
Version 1.0/Phase 2 - Recompile to Emit Object Data/: 02-teach_ai_to_talk.md
Version 1.0/Phase 2 - Recompile to Emit Object Data/files/: hailo_yolov8_inference_udp.json  meson.build  object_detect_emit_udp_stage.cpp
Version 1.0/Phase 3 - Force Video Out HDMI1/: 03-force_video_to_hdmi1.md
Version 1.0/Phase 3 - Force Video Out HDMI1/files/: hdmi-pantilt.sh  pan_tilt_servos_off.py  pan_tilt_track_udp.py
Version 1.0/Troubleshooting Helpers/: pantilt_rom_test.py  set_camera_cattywumpus.py  venv_commands.txt
